deployment/security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pno-network-policy
  namespace: production
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - port: 8000
      protocol: TCP
  podSelector:
    matchLabels:
      app: pno-physics-bench
  policyTypes:
  - Ingress
  - Egress
